--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,5 +128,161 @@
         <item>TSAM</item>
         <item>VDR</item>
     </string-array>
+    <string-array name="predios">
+        <item>Prédio da Administração</item>
+        <item>Prédio da CTI</item>
+        <item>X-5</item>
+        <item>X-10</item>
+        <item>X-25</item>
+        <item>X-30</item>
+        <item>X-40</item>
+    </string-array>
+    <string-array name="salas">
+        <item>01</item>
+        <item>01 - A</item>
+        <item>02</item>
+        <item>03</item>
+        <item>04</item>
+        <item>05</item>
+        <item>06</item>
+        <item>07</item>
+        <item>08</item>
+        <item>09</item>
+        <item>09- COPINHA</item>
+        <item>10</item>
+        <item>101 (EFEV 1º andar)</item>
+        <item>102</item>
+        <item>102 (EFEV 1º andar)</item>
+        <item>103 (EFEV 1º andar)</item>
+        <item>104 (EFEV 1º andar)</item>
+        <item>104 - Equipagem</item>
+        <item>105</item>
+        <item>106</item>
+        <item>108</item>
+        <item>109</item>
+        <item>11</item>
+        <item>110</item>
+        <item>115</item>
+        <item>12</item>
+        <item>120</item>
+        <item>121</item>
+        <item>121 ( Área comum CEL/MOT/EST)</item>
+        <item>121 (Célula Escritório)</item>
+        <item>122</item>
+        <item>127</item>
+        <item>127-A</item>
+        <item>128</item>
+        <item>128-A</item>
+        <item>13</item>
+        <item>14</item>
+        <item>140</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>19</item>
+        <item>20</item>
+        <item>201</item>
+        <item>202</item>
+        <item>203</item>
+        <item>203 (EFEV 2º ANDAR)</item>
+        <item>203 - 2º andar</item>
+        <item>204</item>
+        <item>204 - 2º andar</item>
+        <item>205 (EFEV)</item>
+        <item>205 - 2º andar</item>
+        <item>205/204A</item>
+        <item>206</item>
+        <item>206 - 2º andar</item>
+        <item>207</item>
+        <item>208</item>
+        <item>208 (EFEV 2º ANDAR)</item>
+        <item>209 (Biblioteca ESM)</item>
+        <item>209 (EFEV 2º ANDAR)</item>
+        <item>21</item>
+        <item>210 (EFEV 2º ANDAR)</item>
+        <item>211 - (secretaria) - 2º andar</item>
+        <item>212 (EFEV 2º ANDAR)</item>
+        <item>213 - Chefia - 2º andar</item>
+        <item>213 - EFEV 2º andar</item>
+        <item>214 (2º ANDAR - EFEV)</item>
+        <item>215 - 2º andar</item>
+        <item>215 2ºandar EFEV</item>
+        <item>216 2º andar EFEV</item>
+        <item>217</item>
+        <item>217 2º andar EFEV</item>
+        <item>225</item>
+        <item>226</item>
+        <item>229</item>
+        <item>23</item>
+        <item>231</item>
+        <item>232</item>
+        <item>25</item>
+        <item>27</item>
+        <item>28</item>
+        <item>30</item>
+        <item>31</item>
+        <item>33</item>
+        <item>34</item>
+        <item>36</item>
+        <item>37</item>
+        <item>39</item>
+        <item>40</item>
+        <item>42B</item>
+        <item>42B MEZANINO</item>
+        <item>44</item>
+        <item>44B</item>
+        <item>45</item>
+        <item>46</item>
+        <item>48</item>
+        <item>49</item>
+        <item>50</item>
+        <item>54</item>
+        <item>55</item>
+        <item>56</item>
+        <item>58</item>
+        <item>60</item>
+        <item>61</item>
+        <item>62</item>
+        <item>63</item>
+        <item>65</item>
+        <item>70</item>
+        <item>A05</item>
+        <item>AUDITÓRIO</item>
+        <item>Alojamento de Serviço dos Sagentos</item>
+        <item>Alojamento de Serviço dos Soldados</item>
+        <item>Area do hangar X-10</item>
+        <item>Banheiro Dos Graduados</item>
+        <item>Banheiro Dos Officiais</item>
+        <item>Banheiro Dos Praças</item>
+        <item>Banheiro Feminino</item>
+        <item>Banheiro Feminino do X-30</item>
+        <item>Banheiro Graduados</item>
+        <item>Banheiro feminino 2º andar</item>
+        <item>Banheiro feminino superior do x-30 n°81</item>
+        <item>Banheiro masculino (EFEV 1º andar)</item>
+        <item>Banheiro masculino dos Graduados da ESM térreo</item>
+        <item>Copa</item>
+        <item>Copa ESM</item>
+        <item>Corredor</item>
+        <item>Corredor (EFEV 2º andar)</item>
+        <item>Estoque EAD-ST</item>
+        <item>GERAL</item>
+        <item>HALL DA IMPRESSORAS</item>
+        <item>Hall de entrada</item>
+        <item>Hangar - Ao lado do vestiário Praças</item>
+        <item>Laboratório CEV IE</item>
+        <item>Oficina</item>
+        <item>PESPE E PQUIM</item>
+        <item>PQUIM</item>
+        <item>RECEPÇÃO DO IPEV ENTRADA AO X-30</item>
+        <item>Sala do Cofre</item>
+        <item>Torre de Telemetria</item>
+        <item>X-10- Mecânico de Dia</item>
+        <item>banheiro masculino dos soldados do ESM-M</item>
+        <item>garagem do ipev</item>
+        <item>hangar</item>
+        <item>secretária</item>
+    </string-array>
+
 </resources>
 
