-atualizacao geral do app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,14 +185,14 @@
         <item>202</item>
         <item>203</item>
         <item>203 (EFEV 2º ANDAR)</item>
-        <item>203 - 2º andar</item>
+        <item>203 – 2º andar</item>
         <item>204</item>
-        <item>204 - 2º andar</item>
+        <item>204 – 2º andar</item>
         <item>205 (EFEV)</item>
-        <item>205 - 2º andar</item>
+        <item>205 – 2º andar</item>
         <item>205/204A</item>
         <item>206</item>
-        <item>206 - 2º andar</item>
+        <item>206 – 2º andar</item>
         <item>207</item>
         <item>208</item>
         <item>208 (EFEV 2º ANDAR)</item>
@@ -205,7 +205,7 @@
         <item>213 - Chefia - 2º andar</item>
         <item>213 - EFEV 2º andar</item>
         <item>214 (2º ANDAR - EFEV)</item>
-        <item>215 - 2º andar</item>
+        <item>215 – 2º andar</item>
         <item>215 2ºandar EFEV</item>
         <item>216 2º andar EFEV</item>
         <item>217</item>
